--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "file-saver": "^2.0.5",
     "jspdf": "^3.0.4",
     "lucide-react": "^0.555.0",
-    "next": "16.0.6",
+    "next": "^16.0.7",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "stripe": "^20.0.0",
